[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 100.0
margin_right = -50.0
margin_bottom = -100.0
custom_constants/separation = 30
alignment = 1
script = ExtResource( 1 )

[node name="TitleCard" type="Label" parent="."]
margin_right = 924.0
margin_bottom = 123.0
size_flags_vertical = 3
text = "COCK FEATHERS
Straight & True"
align = 1

[node name="PlayerList" type="VBoxContainer" parent="."]
margin_top = 153.0
margin_right = 924.0
margin_bottom = 276.0
size_flags_vertical = 3

[node name="HostButton" type="Button" parent="."]
margin_top = 306.0
margin_right = 924.0
margin_bottom = 326.0
text = "HOST"

[node name="JoinPanel" type="VBoxContainer" parent="."]
margin_top = 356.0
margin_right = 924.0
margin_bottom = 400.0
custom_constants/separation = 0

[node name="JoinButton" type="Button" parent="JoinPanel"]
margin_right = 924.0
margin_bottom = 20.0
text = "JOIN"

[node name="IPEntry" type="LineEdit" parent="JoinPanel"]
margin_top = 20.0
margin_right = 924.0
margin_bottom = 44.0
text = "127.0.0.1"
align = 1

[node name="StartButton" type="Button" parent="JoinPanel"]
visible = false
margin_top = 44.0
margin_right = 924.0
margin_bottom = 64.0
text = "START"
